# Sibsutis-Data-Protection

./: .clang-tidy  CMakeLists.txt  testhren.c  testhren2.c  testhren3.c
cmake/: CompileOptions.cmake
include/: CMakeLists.txt
include/libdp/: lab1.hpp  lab2.hpp  lab3.hpp  lab4.hpp  lab5.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: main.cpp
src/libdp/: CMakeLists.txt
src/libdp/libdp/: lab1.cpp  lab2.cpp  lab3.cpp
